--- a/client/src/style/MyMovies.css
+++ b/client/src/style/MyMovies.css
@@ -1,3 +1,16 @@
+li{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    outline: 1px white solid;
+    padding: 10px;
+    margin: 10px;
+    list-style-type: none;
+    border-radius: 10px;
+    background-color: rgb(0, 0, 0);
+}
+
 button{
     font-size: 25px;
     font-weight: bold;
