--- a/client/src/style/Home.css
+++ b/client/src/style/Home.css
@@ -1,5 +1,10 @@
+.container{
+    display: flex;
+    flex-direction: column;
+}
+
 ul{
-    width: 100%;
+    
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
